--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,4 @@
+//Cores
 $primaryHtmlColor: #E44D26;
 $secondaryHtmlColor: #F16529;
 $primaryCssColor: #264DE4;
@@ -9,68 +10,325 @@ $fontDefaultColor: #000000;
 $backgroundSecondaryColor: #000000;
 $fontSecondaryColor: #FFFFFF;
 
+//Gradientes
 $gradienteHTML: linear-gradient(90deg, rgba(228, 77, 38, 0.8) 0%, rgba(241, 101, 41, 0.8) 100%);
 $gradienteCSS: linear-gradient(90deg, rgba(38, 77, 228, 0.8) 0%, rgba(41, 101, 241, 0.8) 100%);
 $gradienteJS: linear-gradient(90deg, rgba(229, 162, 40, 0.8) 0%, rgba(241, 191, 38, 0.8) 100%);
 $gradienteLinks: linear-gradient(90deg, #BBBBBB 0%, #DDDDDD 100%);
 
+$breakpoints: (xs: 0, //Smartphones em modo retrato
+    sm: 576px, //Smartphones em modo paisagem ou Tablets em modo retrato
+    md: 768px, //Tablets em modo paisagem
+    lg: 992px, //Desktops
+    xl: 1200px, //Desktops com alta definição HD e FHD
+    xxl: 2000px //Desktops com ultra alta definição QHD e UHD
+);
 
-*{
+
+* {
     margin: 0;
     padding: 0;
     border: 0;
     box-sizing: border-box;
-    h1, h2, h3, p{
-        margin-bottom: 0;
+
+    h1,
+    h2,
+    h3,
+    p {
+        margin-bottom: 0.8em;
     }
+
+    font-family: 'Roboto';
 }
 
-li{
-    list-style: none;
-}
-
-.flex-container-row{
+.flex-container-row {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
 }
 
-.flex-container-column{
+.flex-container-column {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
+}
+
+.menu {
+    justify-content: space-between;
+    background-color: $backgroundSecondaryColor;
+    color: $fontSecondaryColor;
+    align-items: flex-start;
+
+    a {
+        color: $fontSecondaryColor;
+        text-decoration: none;
+        font-size: 150%;
+    }
+
+    ul {
+        list-style-type: none;
+        margin-right: 15px;
+    }
+
+    li {
+        margin: 10px;
+    }
+}
+
+.main {
+    h1 {
+        font-size: 250%;
+    }
+
+    h2 {
+        margin: 0;
+        font-size: 200%;
+    }
+}
+
+.section-details {
+    width: 55vw;
+    padding: 3vw;
+
+    h2 {
+        font-size: 300%;
+    }
+
+    h3 {
+        font-size: 200%;
+    }
+
+    p {
+        text-align: justify;
+        font-size: 120%;
+        font-family: 'Roboto';
+        font-weight: bold
+    }
+}
+
+.alinharTop {
+    align-items: flex-start;
+}
+
+.listaDeLinks {
+
+    width: 30vw;
+
+    ul {
+        list-style-type: none;
+        align-items: flex-start;
+    }
+
+    li {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 10px;
+    }
+
+    img {
+        width: 50px;
+        height: 50px;
+        margin-top: 5px;
+    }
+
+    a {
+        margin: 0 20px;
+        text-decoration: none;
+        color: $fontDefaultColor;
+    }
+}
+
+.botao {
+    background-color: $backgroundSecondaryColor;
+    color: $fontSecondaryColor;
+    padding: 10px 20px;
+    border-radius: 10px;
+    text-decoration: none;
+    width: 200px;
+    font-weight: 900;
+}
+
+.destaqueHTML {
+    color: $primaryHtmlColor;
+}
+
+.destaqueCSS {
+    color: $primaryCssColor;
+}
+
+.destaqueJS {
+    color: $primaryJsColor;
+}
+
+.rodape {
+    background-color: $backgroundSecondaryColor;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+
+    p {
+        color: $fontSecondaryColor;
+        margin-left: 10px;
+        font-size: 20px;
+        margin-top: 10px;
+    }
+}
+
+.redesSociais {
+    margin-left: 10px;
+
+    img {
+        height: 70%;
+        width: 70%;
+    }
+}
+
+
+#Destaque {
+    background: url(/src/assets/Destaque_o20.png);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#HTML {
+    background: $gradienteHTML;
+    #LogoHTML {
+        width: 25vw;
+        height: 25vw;
+    }
+}
+
+#CSS {
+    background: $gradienteCSS;
+}
+
+#JavaScript {
+    background: $gradienteJS;
+}
+
+#LinksUteis {
+    background: $gradienteLinks;
+
+    h2 {
+        font-size: 2rem;
+    }
+
+    h3 {
+        font-size: 200%;
+    }
+
+    li {
+        a {
+            font-size: 150%;
+            font-weight: bold;
+        }
+    }
+}
+
+main,
+section {
+    height: 75vh;
     text-align: center;
+    overflow: hidden;
 }
 
 
-// Smartphone em modo retrato
-@media (min-width: 0px){
-    
+@media (orientation: landscape) {
+    #Destaque {
+        background-size: 110vw;
+    }
+
+    #InverterFlexBox {
+        flex-direction: row-reverse;
+    }
 }
 
-// Smartphone em modo paisagem e tabletsmodo retrato
-@media (min-width: 576px){
-
+@media (orientation: portrait) {
+    #Destaque {
+        background-size: 200vw;
+    }
 }
 
-// Tablet modo paisagem
-@media (min-width: 768px){
 
+//Smartphones em modo retrato
+@media (min-width: map-get($breakpoints, xs)) {
+    html {
+        font-size: 14px;
+    }
+    #logo {
+        width: 100px;
+        height: 100px;
+    }
+
+    .menu {
+        height: 50px;
+
+        ul {
+            height: 50px;
+        }
+    }
 }
 
-// Notbook
-@media (min-width: 992px){
+// Smartphones em modo paisagem
+@media (min-width: map-get($breakpoints, sm)) and (orientation: landscape) {}
 
+// Tablets em modo retrato
+@media (min-width: map-get($breakpoints, sm)) and (orientation: portrait) {
+    #logo {
+        width: 200px;
+        height: 200px;
+    }
+
+    .menu {
+        height: 100px;
+
+        ul {
+            height: 100px;
+        }
+    }
 }
 
-// Desktop
-@media (min-width: 1200px){
+//Tablets em modo paisagem
+@media (min-width: map-get($breakpoints, md)) {
+    #logo {
+        width: 200px;
+        height: 200px;
+    }
 
+    .menu {
+        height: 100px;
+
+        ul {
+            height: 100px;
+        }
+    }
 }
 
-// Desktop Alta definiÇão
-@media (min-width: 2000px){
+//Desktops
+@media (min-width: map-get($breakpoints, lg)) {
+    html {
+        font-size: 20px
+    }
+    #logo {
+        width: 260px;
+        height: 260px;
+    }
 
+    .menu {
+        height: 130px;
+
+        ul {
+            height: 130px;
+        }
+    }
 }
+
+//Desktops com alta definição HD e FHD
+@media (min-width: map-get($breakpoints, xl)) {}
